--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
